force-app/main/default/objects/cadmus_core__Pack_DocConfig__c/cadmus_core__Pack_DocConfig__c.object-meta.xml
<CustomObject>
    <label>Pack DocConfig</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pack DocConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>