force-app/main/default/objects/cadmus_core__Pack_DocConfig__c/fields/cadmus_core__Merge_Sequence__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Merge_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Describe to which merge &quot;group&quot; it belong</description>
    <inlineHelpText>Describe to which merge &quot;group&quot; it belong. A merge group is create for each Merge Sequence. Document name is taken from the document with Order matching the Merge sequence.</inlineHelpText>
    <label>Merge Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>