force-app/main/default/objects/cadmus_core__Pack_DocConfig__c/fields/cadmus_core__Order__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Order__c</fullName>
    <inlineHelpText>the order of the docconfigs to process. This is important when glueing PDF&apos;s together</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>