force-app/main/default/objects/cadmus_core__Pack_DocConfig__c/fields/cadmus_core__Pack__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Pack__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PDF Butler Pack</label>
    <referenceTo>cadmus_core__Pack__c</referenceTo>
    <relationshipLabel>Pack DocConfigs</relationshipLabel>
    <relationshipName>Pack_DocConfigs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>